# QuinusLang

./: .cursorrules  .gitignore  404.html  ARCHITECTURE.html  BOOTSTRAP_HANDOFF.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  LICENSE  README.md  SPEC.md  _config.yml  book.toml  build-installer.ps1  build.ps1  build.sh  builtins.html  cli.html  compile-flags.html  contributing.html  control-flow.html  defer.html  embedded.html  expressions.html  ffi.html  hazard-unsafe.html  index.html  install.html  installer.iss  keywords.html  language.html  make-portable.ps1  mkdocs.yml  modules-ffi.html  move-semantics.html  numeric-literals.html  pattern-matching.html  pointers-memory.html  print.html  (+30 more)
benchmarks/: README.md  run.ps1
compiler/: ast.q  codegen.q  codegen_test.q  input.q  input_fn.q  input_fs.q  input_min2.q  input_minimal.q  input_simple.q  input_strtest.q  input_test.q  input_test2.q  input_test3.q  lexer.q  lexer_test.q  main.q  parser.q  parser_test.q  preprocess.q  preprocess_test.q  runtime.q  semantic.q  semantic_test.q  test_and.q  test_eternal.q  test_flattened.q  test_form.q  test_fs.q  test_fs_exists.q  test_fs_full.q  test_fs_no_readall.q  test_fs_readall_step.q  test_fs_simple.q  test_fs_vec_tokens.q  test_hash.q  test_lexer_one.q  test_lexer_tokenize.q  test_llvm_minimal.q  test_mem.q  test_minimal.q  (+8 more)
docs/: ARCHITECTURE.md  README.md  SUMMARY.md  advanced.html  arrays.html  benchmarks.md  builtins.md  cli.html  cli.md  compile-flags.md  contributing.md  control-flow.html  control-flow.md  defer.md  embedded.md  expressions.md  ffi.md  functions.html  getting-started.html  hazard-unsafe.md  index.html  index.md  install.md  keywords.md  language.html  language.md  llvm-backend.md  modules-ffi.md  modules.html  move-semantics.md  numeric-literals.md  pattern-matching.md  pointers-memory.md  pointers.html  prism-quinuslang.js  quick-reference.md  result-type.md  std-arena.md  std-fmt.md  std-fs.md  (+25 more)
examples/: class_example.q  class_example.quin  control_flow.q  control_flow.quin  enum_union.q  functions.q  functions.quin  hello.q  hello.quin  pointers.q  struct_example.q  struct_example.quin
javascripts/: drawer.js
overrides/: main.html
pygments_qpp/: pyproject.toml
pygments_qpp/pygments_qpp/: __init__.py  lexer.py
pygments_quinus/: pyproject.toml
pygments_quinus/pygments_quinus/: __init__.py  lexer.py
runtime/: runtime.c  runtime.h
scripts/: build-runtime.ps1  build-runtime.sh
src/: error.rs  lib.rs  main.q  (+3 more)
(+71 files in other folders)
