[package]
name = "quinuslang"
version = "0.2.2"
edition = "2021"
authors = ["QuinusLang"]
description = "A fully functional compilable programming language"

[[bin]]
name = "quinus"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
logos = "0.14"
walkdir = "2"
notify = "6"
lsp-server = "0.7"
lsp-types = "0.94"
serde_json = "1.0"
# llvm18-1-force-dynamic: dynamic linking avoids libxml2s.lib dep (official Windows tarball lacks it)
# DLLs are bundled with the release
inkwell = { version = "0.8", features = ["llvm18-1-force-dynamic"] }
