[package]
name = "qpp"
version = "0.3.2"
edition = "2021"
authors = ["Q++"]
description = "Q++ — a systems programming language with assembly-level control and readable syntax"

[[bin]]
name = "qpp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
logos = "0.14"
walkdir = "2"
notify = "6"
lsp-server = "0.7"
lsp-types = "0.94"
serde_json = "1.0"
inkwell = { version = "0.8", features = ["llvm18-1"] }
