[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygments-quinus"
version = "0.1.0"
description = "Pygments lexer for QuinusLang"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["pygments_quinus*"]

[project.entry-points."pygments.lexers"]
quinuslang = "pygments_quinus.lexer:QuinusLangLexer"
